--- a/README
+++ b/README
@@ -19,3 +19,8 @@ Under the following conditions:
 For full terms of the license, see the [Creative Commons License](https://creativecommons.org/licenses/by-nc-nd/4.0/).
 
 [![CC BY-NC-ND](https://licensebuttons.net/l/by-nc-nd/4.0/88x31.png)](https://creativecommons.org/licenses/by-nc-nd/4.0/)
+
+about
+forensic evaluations
+contact 
+home
